src/objects/LookupRollupSummary_GLBL__c.object
<CustomObject>
    <description>Object defines a the fields on a child object to roll up to a parent object using Lookup Rollup functionality.

MERC : Created on 2014-05-27 by Joe Ferraro, Mavens Consulting</description>
    <fields>
        <fullName>Active_GLBL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Realtime rollups can only be set when the Child Apex Trigger has been deployed.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AggregateOperation_GLBL__c</fullName>
        <inlineHelpText>Rollup operation.</inlineHelpText>
        <label>Aggregate Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Sum</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Count</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AggregateResultField_GLBL__c</fullName>
        <inlineHelpText>API name of the field that will store the result of the rollup on the Parent Object, e.g. AnnualRevenue</inlineHelpText>
        <label>Aggregate Result Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculateJobId_GLBL__c</fullName>
        <inlineHelpText>This field is used by the system when using the Calculate button to track if a calculation job is already running. Clear this field if the system reports the calculate job is already running and you known this is not the case.</inlineHelpText>
        <label>Calculate Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculationMode_GLBL__c</fullName>
        <inlineHelpText>Realtime mode requires an Apex Trigger to be deployed for the Child Object. Click Manage Child Trigger button to deploy.</inlineHelpText>
        <label>Calculation Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Realtime</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChildObject_GLBL__c</fullName>
        <inlineHelpText>API name of the Child Object, e.g. Opportunity</inlineHelpText>
        <label>Child Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldToAggregate_GLBL__c</fullName>
        <inlineHelpText>API name of the field on the Child Object that contains the value to rollup, e.g. Amount</inlineHelpText>
        <label>Field to Aggregate</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideTriggerValidation_GLBL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, developer will be required to connect to the Lookup service via Apex (no trigger will be created automatically).</description>
        <inlineHelpText>If checked, developer will be required to connect to the Lookup service via Apex (no trigger will be created automatically).</inlineHelpText>
        <label>Override Trigger Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentObject_GLBL__c</fullName>
        <inlineHelpText>API name of the Parent Object, e.g. Account</inlineHelpText>
        <label>Parent Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipCriteriaFields_GLBL__c</fullName>
        <inlineHelpText>If you have specified a relationship criteria, you must confirm the fields referenced by it here on separate lines, for example for criteria StageName = &apos;Won&apos; list StageName in this field. You do not need to specify the Field to Aggregate field however.</inlineHelpText>
        <label>Relationship Criteria Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RelationshipCriteria_GLBL__c</fullName>
        <inlineHelpText>SOQL WHERE clause applied when querying Child Object records, e.g. Amount &gt; 200</inlineHelpText>
        <label>Relationship Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipField_GLBL__c</fullName>
        <inlineHelpText>API name of the Lookup field on the Child Object relating to the Parent Object, e.g. AccountId</inlineHelpText>
        <label>Relationship Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TreatZeroAsNull_GLBL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, a zero calculation will be stamped as null</description>
        <inlineHelpText>If true, a zero calculation will be stamped as null</inlineHelpText>
        <label>TreatZeroAsNull</label>
        <type>Checkbox</type>
    </fields>
    <label>Lookup Rollup Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active_GLBL__c</columns>
        <columns>ParentObject_GLBL__c</columns>
        <columns>ChildObject_GLBL__c</columns>
        <columns>AggregateOperation_GLBL__c</columns>
        <columns>AggregateResultField_GLBL__c</columns>
        <columns>CalculateJobId_GLBL__c</columns>
        <columns>CalculationMode_GLBL__c</columns>
        <columns>FieldToAggregate_GLBL__c</columns>
        <columns>OverrideTriggerValidation_GLBL__c</columns>
        <columns>RelationshipCriteria_GLBL__c</columns>
        <columns>RelationshipCriteriaFields_GLBL__c</columns>
        <columns>RelationshipField_GLBL__c</columns>
        <columns>TreatZeroAsNull_GLBL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Lookup Rollup Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Rollup Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>